# dummyproject

./: README.md  pyproject.toml  tox.ini
dummyproject/: dummyproject.py
tests/: test_dummyproject.py
